# pid-entity-detection-graph-construction

./: .gitignore  README.md  pyproject.toml
docs/: index.html
docs/viewers/: gemini-3-flash-preview.html  gpt-5.4.html  grok-4.2-beta.html  sonnet-4.6.html
outputs/gemini-3-flash-preview/: confirmed_tags.json  graph.json  graph_viewer.html  report.md
outputs/gpt-5.4/: confirmed_tags.json  findings.json  graph.json  graph_viewer.html  report.md
outputs/grok-4.2-beta/: confirmed_tags.json  findings.json  graph.json  graph_viewer.html  report.md  sop_structured.json
outputs/sonnet-4.6/: confirmed_tags.json  findings.json  graph.json  graph_viewer.html  report.md
src/pid_audit/: __init__.py  audit.py  client.py  graph_build.py  graph_ui.py  ingest.py  main.py  models.py  ocr.py  ocr_correct.py  report.py  schemas.py  sop_parse.py  tag_taxonomy.py  utils.py  vision.py  visualize.py
